# KYZO

./: .cursorrules  .env.example  .gitignore  .gitlab-ci.yml  CLERK_AI_AUTHENTICATION.md  Dockerfile  FIGMA_SETUP_GUIDE.md  README.md  SETUP_GUIDE.md  docker-compose.yml  figma-design-extractor.js  figma-extractor.js  figma-test.js  package-lock.json  package.json  pyproject.toml  readme.md  requirements.txt  setup-figma.sh  test-jwt-verification.js  tsconfig.json  urls_docs_pinecone_io_simplescraper.txt  vercel.json  windsurf-figma-setup.md
.github/workflows/: enterprise-deploy.yml  nextjs-gh-pages.yml
claude-code-skill/: SKILL.md
database/: NEON_POSTGRESQL18_GUIDE.md  postgresql18-advanced-setup.sql  schema.sql
fashion-app/: .env.example  CLAUDE.md  CLERK.md  LICENSE  README.md  app.json  eas.json  next.config.js  package-lock.json  package.json  tsconfig.json
fashion-app/app/: _layout.tsx  index.tsx  page.tsx  support.tsx
fashion-app/components/: APIKeyManager.tsx  BotProtectionSettings.tsx  GoogleSignInButton.tsx  NativeAuthView.tsx  OrganizationManager.tsx  SocialAuthButtons.tsx
frontend-example/: ClerkAuthProvider.tsx
src/: app.ts  main.py  main_enhanced.py  main_vercel_enhanced.py
src/ai/atoms/: aiConfig.ts
src/config/: clerk.ts  database.ts  jwtVerification.ts  langchain.ts  pinecone.ts  redis.ts  schema.sql  settings.py  storage.ts
src/controllers/: authController.ts  clerkAuthController.ts
src/database/: backup-recovery.ts  migrations.ts  monitoring.ts  neon-api.ts  security.ts
src/lifecycle/: events.py
src/middleware/: auth.ts  authMiddleware.ts  cache.ts  security.py  validation.ts
src/models/: Collection.ts  User.ts
src/routes/: ai.ts  apifyFashionAI.ts  auth.ts  clerkAuth.ts  collection.ts  fashionAI.ts  jwtTest.ts  langchain.ts  upload.ts  user.ts
src/scripts/: initDatabase.ts
src/services/: batchingService.ts  fashionAIService.ts  userService.ts
src/types/: index.ts
src/utils/: validation.ts
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  upstash.tf  variables.tf
tests/: test_auth_service.py  test_integration.py
(+202 files in other folders)
